deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  namespace: <PROJECT>-<GROUP>
  labels:
    app: admin
spec:
  replicas: 2
  minReadySeconds: 5
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: admin
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: admin
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - admin
              topologyKey: kubernetes.io/hostname
      containers:
        - name: admin
          image: <IMAGE>
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              protocol: TCP
              containerPort: 8000
            - name: crpc
              protocol: TCP
              containerPort: 9000
            - name: grpc
              protocol: TCP
              containerPort: 10000
          resources:
            limits:
              memory: 4096Mi
              cpu: 4000m
            requests:
              memory: 256Mi
              cpu: 250m
          startupProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 0
            timeoutSeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service-headless
  namespace: <PROJECT>-<GROUP>
  labels:
    app: admin
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: crpc
      protocol: TCP
      port: 9000
    - name: grpc
      protocol: TCP
      port: 10000
  selector:
    app: admin
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: <PROJECT>-<GROUP>
  labels:
    app: admin
spec:
  type: ClusterIP
  ports:
    - name: web
      protocol: TCP
      port: 8000
  selector:
    app: admin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin-ingress
  namespace: <PROJECT>-<GROUP>
  labels:
    app: admin
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules: 
    - host: <HOST>
      http:
        paths:
          - path: /admin\..*
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 8000
